--- a/src/test/resources/OCUOld.properties
+++ b/src/test/resources/OCUOld.properties
@@ -15267,3 +15267,120 @@
 4424789-name=Pred THM a VKM
 4424790-name=Liptovská Osada
 4424791-name=Hrboltová
+
+
+
+4155877-name=NIZNA BOCA
+4159786-name=KOSTOLNA
+4160975-name=PARTIZANSKA LUPCA
+4163248=827452
+4163248-name=Ťahanovce
+4163500-name=Ňagov
+4164450-name=STRÁŇAVY
+4164451=1
+4164451-name=Trnové
+4167693-name=TR.TEPLA
+4168056-name=LAZISKO-POZEMNOKNIZ.STAV
+4168486-name=HUTY
+4168491-name=JOOB RAZTOKY
+4169092=862738
+4169092-name=Šafarka
+4172686=30
+4172686-name=Garboc
+4178995-name=DOVALOVO
+4210937-name=LIPTOVSKA PORUBKA
+4237350-name=Ostratice
+4237351-name=Pred THM
+4237697=835528
+4237697-name=Ohlušené LV - THM
+4253869-name=Veľké Rovné-katastrálny stav
+4256783-name=Važec
+4256789-name=SV.KRIZ-POZEMNOKNIZ.STAV
+4273357-name=LV pred THM
+4276587-name=Opačka
+4280107=807150
+4280107-name=Budimír
+4280109-name=Tepličany
+4290086=822191
+4290086-name=Machalovce
+4290087-name=Čenčice
+4290158=870862
+4290158-name=Východná
+4290167=802174
+4290167-name=Batizovce
+4290358-name=ILAVA
+4293817-name=KRALOVSKA LUBELA
+4293963-name=Kolárovice - stav pred THM
+4294001-name=OKOLIČNÉ
+4297020-name=Cígeľ
+4300202=2
+4300202-name=LEHOTA POD VTACNIKOM
+4300734=9
+4300734-name=LV pred THM
+4303598=802735
+4303598-name=BERNOLAKOVO
+4308423=838837
+4308423-name=Mútne
+4311307-name=VELKA IDA
+4311558=830011
+4311558-name=Pódafa
+4314946-name=par. pred ZMVM
+4320152=9
+4320152-name=Klokočov
+4322938-name=LV pred THM
+4322980=3
+4322980-name=parcela EN
+4333671-name=MALA CHOCHOLNA
+4333672-name=MALA CHOCHOLNA
+4333843=846660
+4333843-name=PINCINÁ
+4333845=840572
+4333845-name=NITRA NAD IPĹOM
+4333856=873683
+4333856-name=Zubrohlava
+4336579=820695
+4336579-name=Chmelnica
+4339220-name=MADOCANY
+4339656-name=VLKOLINEC
+4348927=854492
+4348927-name=SEBEDRAŽIE
+4348930=2
+4348930-name=LEHOTA POD VTACNIKOM
+4349251=810886
+4349251-name=DLHA LUKA
+4357733=802077
+4357733-name=BARDEJOVSKÁ NOVÁ VES
+4379796=842877
+4379796-name=Novoť
+4379797=844110
+4379797-name=Oravská Lesná
+4379813-name=Cígeľ
+4380123-name=HUBOVA
+4382590=859401
+4382590-name=Suchá Hora
+4382591=869708
+4382591-name=Vitanová
+4383007-name=VLKOLINEC
+4383009-name=VLKOLINEC
+4383013-name=LIPTOVSKA STIAVNICA
+4383014-name=Pred THM a VKM
+4383022-name=Vyšné Čabiny
+4383023-name=Horbok Čabiny
+4388630-name=parcely pred ZMVM Detva
+4388783=810886
+4388783-name=DLHA LUKA
+4395095=2
+4395095-name=VELKA LEHOTA
+4397635-name=Horbok Čabiny
+4427218=854492
+4427218-name=SEBEDRAŽIE
+4427318=801062
+4427318-name=BANSKÁ BYSTRICA
+4427557-name=LIPTOVSKA PORUBKA
+4427585=9
+4427585-name=LV pred THM
+4430413=835943
+4430413-name=Malý Šariš
+4430435=842877
+4430435-name=Novoť
+
