--- a/src/test/resources/OCUOld.properties
+++ b/src/test/resources/OCUOld.properties
@@ -15384,3 +15384,51 @@
 4430435=842877
 4430435-name=Novoť
 
+
+
+4163251=827347
+4163251-name=Košická Nová Ves
+4164723-name=Pravrovce
+4171794-name=HAMRY
+4192050-name=pred ZMVM
+4259975-name=ŠURANY I.
+4276577-name=Nižná Myšľa
+4276599=513326
+4276599-name=LEDNICKÉ ROVNE
+4286779=839108
+4286779-name=MÝTNA
+4290192=830241
+4290192-name=KYJOV
+4300241=3
+4300241-name=Babkov
+4300826-name=KRASNANY
+4303482=2
+4303482-name=Babkov
+4308429-name=Košice
+4314945=806188
+4314945-name=Brehy
+4323176=9
+4323176-name=Kunerad
+4336438=806005
+4336438-name=Lamač
+4336645=875147
+4336645-name=SKUBÍN
+4339222-name=TURIK
+4339663-name=Pred THM a VKM
+4348881=866024
+4348881-name=Turová
+4348928=9
+4348928-name=pred THM
+4379809-name=pred THM
+4380120-name=VLKOLINEC
+4383145=9
+4383145-name=Klokočov
+4385453-name=SV.KRIZ-POZEMNOKNIZ.STAV
+4391900-name=LV pred THM
+4392101-name=CERNOVA
+4385494=873900
+4385494-name=Zvolenská Slatina
+4395100=7
+4395100-name=HORNY KAMENEC
+4398046=838837
+4398046-name=Mútne
